# taster

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
.semaphore/: semaphore.yml
authorization/: views.py
cart/: cart.py  forms.py  urls.py  views.py
core/: settings.py  urls.py
main/: forms.py  urls.py  views.py
menu/: admin.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_foodtype_slug.py  0003_alter_foodtype_slug.py  0004_alter_food_image.py  0005_food_calories_food_description_alter_food_name.py  0006_foodtype_priority.py
news/: admin.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
static/admin/css/: style.css
static/css/: style.css
static/js/: cart.js  hystmodal.min.js  main.js
store/: views.py
templates/: base.html  index.html  news.html
templates/admin/: base_site.html
templates/authorization/: login.html  signup.html
templates/cart/: checkout.html  detail.html
templates/main/: about.html  main_page.html
templates/menu/: food_by_type.html  menu.html
templates/news/: news.html  news_item.html
